--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@uploadthing/react": "^7.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "flowbite": "^2.5.1",
     "lucide": "^0.441.0",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
@@ -50,7 +51,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
     "postcss": "^8",
-    "prisma": "^5.19.1",
+    "prisma": "^5.20.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
